# git-raft

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.omx/: metrics.json
.omx/logs/: hooks-2026-03-27.jsonl  turns-2026-03-27.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
docs/: index.md
docs/architecture/: index.md  runtime.md
docs/exec-plans/: index.md
docs/exec-plans/active/: index.md
docs/exec-plans/completed/: 2026-03-27-structure-split.md  index.md
docs/product/: cli.md  index.md
docs/quality/: index.md  real-merge.md
docs/superpowers/plans/: 2026-04-02-author-rewrite.md
docs/superpowers/specs/: 2026-04-02-author-rewrite-design.md
scripts/: run_real_merge_scenario.sh  setup_real_merge_fixture.sh
scripts/real-merge/: run_scenarios.sh  setup_viking602_tests.sh
src/: ai.rs  cli.rs  commit.rs  config.rs  events.rs  git.rs  hooks.rs  lib.rs  main.rs  risk.rs  store.rs
src/ai/: client.rs  commit_plan_tool.rs  config.rs  context.rs  diff_summary.rs  exchange.rs  provider.rs  request.rs
src/app/: dispatch.rs
src/commands/: ai_tasks.rs  author.rs  branch.rs  commit.rs  merge_rebase.rs  mod.rs  purge.rs  push.rs
src/commands/commit/: cache.rs  render.rs  workflow.rs
src/commit/: inputs.rs  message.rs
src/config/: defaults.rs  files.rs  merge.rs  types.rs
src/git/: process.rs  repo.rs  snapshot.rs  worktree.rs
src/hooks/: builtin.rs  external.rs
tests/: cli.rs  guardrails.rs
tests/cli_cases/: author.rs  commit.rs  purge.rs
tests/support/: mod.rs
(+3 files in other folders)
